--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
   "devDependencies": {
     "@types/node": "^16.3.3",
     "@types/react": "^17.0.14",
-    "eslint": "7.31.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
+    "eslint": "^7.31.0",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "11.0.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2",
     "typescript": "^4.3.5"
   }
 }
